Background of card pane is no longer blurred

--- a/web/biscommon.css
+++ b/web/biscommon.css
@@ -497,7 +497,6 @@ input[type="radio"] .styled:checked + label::after {
     width : 100%;
     height : 100%;
     opacity : 0.7;
-    filter : blur(8px);
     position : absolute;
     overflow : hidden;
 }
